--- a/internet/webFrameworks.html
+++ b/internet/webFrameworks.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Eugene Farenyuk</title>
+    <title>Web Frameworks</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -27,7 +27,7 @@
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Internet<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="internet/webFrameworks.html">Web Frameworks</a></li>
+                            <li><a href="/internet/webFramewordks.html">Web Frameworks</a></li>
                             <li><a href="#">HTML CSS</a></li>
                             <li><a href="#">JavaScript</a></li>
                         </ul>
@@ -48,23 +48,16 @@
     </nav>
 
     <div class="container">
-        <h4>Eugene Farenyuk</h4>
+        <h4>Web Frameworks</h4>
         <!--<p>This site is hosted with GitHub Pages.</p>-->
 		<ul>
-			<li class="dropdown">
-				<a class="dropdown-toggle" data-toggle="dropdown" href="#">Internet<span class="caret"></span></a>
-				<ul class="dropdown-menu">
-					<li><a href="internet/webFrameworks.html">Web Frameworks</a></li>
-					<li><a href="internet/htmlCSS.html">HTML CSS</a></li>
-					<li><a href="internet/JavaScript.html">JavaScript</a></li>
-				</ul>
-			</li>
-			<li class="pagebody"><a href="#">Python</a></li>
-			<li class="pagebody"><a href="#">Java</a></li>
-			<li class="pagebody"><a href="#">C#</a></li>
-			<li class="pagebody"><a href="#">Algorithms</a></li>
-			<li class="pagebody"><a href="#">Data structures</a></li>
-			<li class="pagebody"><a href="#">Software Engineering</a></li>
+			<li class="pagebody"><a href="#">ASP.NET</a></li>
+			<li class="pagebody"><a href="#">Bootstrap</a></li>
+			<li class="pagebody"><a href="#">Google Web Toolkit</a></li>
+			<li class="pagebody"><a href="#">AngularJS</a></li>
+			<li class="pagebody"><a href="#">web2py</a></li>
+			<li class="pagebody"><a href="#">Ruby on Rails</a></li>
+			<li class="pagebody"><a href="#">Laravel</a></li>
 		</ul>
     </div>
 
