--- a/internet/webFrameworks.html
+++ b/internet/webFrameworks.html
@@ -28,21 +28,21 @@
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Internet<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="/internet/webFramewordks.html">Web Frameworks</a></li>
-                            <li><a href="#">HTML CSS</a></li>
-                            <li><a href="#">JavaScript</a></li>
+                            <!--<li><a href="#">HTML CSS</a></li>-->
+                            <!--<li><a href="#">JavaScript</a></li>-->
                         </ul>
                     </li>
-                    <li><a href="#">Python</a></li>
+                    <!--<li><a href="#">Python</a></li>
                     <li><a href="#">Java</a></li>
                     <li><a href="#">C#</a></li>
                     <li><a href="#">Algorithms</a></li>
                     <li><a href="#">Data structures</a></li>
-                    <li><a href="#">Software Engineering</a></li>
+                    <li><a href="#">Software Engineering</a></li>-->
                 </ul>
-                <ul class="nav navbar-nav navbar-right">
+                <!--<ul class="nav navbar-nav navbar-right">
                     <li><a href="#"><span class="glyphicon glyphicon-file"></span> About</a></li>
                     <li><a href="#"><span class="glyphicon glyphicon-envelope"></span> Contact</a></li>
-                </ul>
+                </ul>-->
             </div>
         </div>
     </nav>
@@ -52,12 +52,12 @@
         <!--<p>This site is hosted with GitHub Pages.</p>-->
 		<ul>
 			<li class="pagebody"><a href="#">ASP.NET</a></li>
-			<li class="pagebody"><a href="#">Bootstrap</a></li>
+			<!--<li class="pagebody"><a href="#">Bootstrap</a></li>
 			<li class="pagebody"><a href="#">Google Web Toolkit</a></li>
 			<li class="pagebody"><a href="#">AngularJS</a></li>
 			<li class="pagebody"><a href="#">web2py</a></li>
 			<li class="pagebody"><a href="#">Ruby on Rails</a></li>
-			<li class="pagebody"><a href="#">Laravel</a></li>
+			<li class="pagebody"><a href="#">Laravel</a></li>-->
 		</ul>
     </div>
 
