--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Internet<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="internet/webFrameworks.html">Web Frameworks</a></li>
-                            <li><a href="#">HTML CSS</a></li>
-                            <li><a href="#">JavaScript</a></li>
+                            <!--<li><a href="#">HTML CSS</a></li>-->
+                            <!--<li><a href="#">JavaScript</a></li>-->
                         </ul>
                     </li>
-                    <li><a href="#">Python</a></li>
+                    <!--<li><a href="#">Python</a></li>
                     <li><a href="#">Java</a></li>
                     <li><a href="#">C#</a></li>
                     <li><a href="#">Algorithms</a></li>
                     <li><a href="#">Data structures</a></li>
-                    <li><a href="#">Software Engineering</a></li>
+                    <li><a href="#">Software Engineering</a></li>-->
                 </ul>
-                <ul class="nav navbar-nav navbar-right">
+                <!--<ul class="nav navbar-nav navbar-right">
                     <li><a href="#"><span class="glyphicon glyphicon-file"></span> About</a></li>
                     <li><a href="#"><span class="glyphicon glyphicon-envelope"></span> Contact</a></li>
-                </ul>
+                </ul>-->
             </div>
         </div>
     </nav>
@@ -55,16 +55,16 @@
 				<a class="dropdown-toggle" data-toggle="dropdown" href="#">Internet<span class="caret"></span></a>
 				<ul class="dropdown-menu">
 					<li><a href="internet/webFrameworks.html">Web Frameworks</a></li>
-					<li><a href="internet/htmlCSS.html">HTML CSS</a></li>
-					<li><a href="internet/JavaScript.html">JavaScript</a></li>
+					<!--<li><a href="internet/htmlCSS.html">HTML CSS</a></li>-->
+					<!--<li><a href="internet/JavaScript.html">JavaScript</a></li>-->
 				</ul>
 			</li>
-			<li class="pagebody"><a href="#">Python</a></li>
+			<!--<li class="pagebody"><a href="#">Python</a></li>
 			<li class="pagebody"><a href="#">Java</a></li>
 			<li class="pagebody"><a href="#">C#</a></li>
 			<li class="pagebody"><a href="#">Algorithms</a></li>
 			<li class="pagebody"><a href="#">Data structures</a></li>
-			<li class="pagebody"><a href="#">Software Engineering</a></li>
+			<li class="pagebody"><a href="#">Software Engineering</a></li>-->
 		</ul>
     </div>
 
