--- a/internet/webFrameworks.html
+++ b/internet/webFrameworks.html
@@ -27,7 +27,7 @@
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Internet<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="/internet/webFramewordks.html">Web Frameworks</a></li>
+                            <li><a href="/internet/webFrameworks.html">Web Frameworks</a></li>
                             <!--<li><a href="#">HTML CSS</a></li>-->
                             <!--<li><a href="#">JavaScript</a></li>-->
                         </ul>
