--- a/index.html
+++ b/index.html
@@ -1,72 +1,41 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
+
 <html lang="en">
-<head>
-    <title>Eugene Farenyuk</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<style>
-		.pagebody{margin: 10px 0;}
-	</style>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-<body>
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="https://eugenefarenyuk.github.io/">Eugene</a>
+    <head>
+        <meta charset="utf-8" />
+        <title> Eugene Farenyuk </title>
+        <link rel="stylesheet" href="mainCSS.css" type="text/css" media="screen"/>
+    </head>
+    <body>
+        <div id="page_header">
+            <div id="corp_logo">
+                <p><br/><br/>EugeneFarenyuk.github.io</p>
             </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav">
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Internet<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="internet/webFrameworks.html">Web Frameworks</a></li>
-                            <!--<li><a href="#">HTML CSS</a></li>-->
-                            <!--<li><a href="#">JavaScript</a></li>-->
-                        </ul>
-                    </li>
-                    <!--<li><a href="#">Python</a></li>
-                    <li><a href="#">Java</a></li>
-                    <li><a href="#">C#</a></li>
-                    <li><a href="#">Algorithms</a></li>
-                    <li><a href="#">Data structures</a></li>
-                    <li><a href="#">Software Engineering</a></li>-->
+            <div id="page_menu">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="software.html">Software</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
-                <!--<ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon glyphicon-file"></span> About</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-envelope"></span> Contact</a></li>
-                </ul>-->
             </div>
         </div>
-    </nav>
-
-    <div class="container">
-        <h4>Eugene Farenyuk</h4>
-        <!--<p>This site is hosted with GitHub Pages.</p>-->
-		<ul>
-			<li class="dropdown">
-				<a class="dropdown-toggle" data-toggle="dropdown" href="#">Internet<span class="caret"></span></a>
-				<ul class="dropdown-menu">
-					<li><a href="internet/webFrameworks.html">Web Frameworks</a></li>
-					<!--<li><a href="internet/htmlCSS.html">HTML CSS</a></li>-->
-					<!--<li><a href="internet/JavaScript.html">JavaScript</a></li>-->
-				</ul>
-			</li>
-			<!--<li class="pagebody"><a href="#">Python</a></li>
-			<li class="pagebody"><a href="#">Java</a></li>
-			<li class="pagebody"><a href="#">C#</a></li>
-			<li class="pagebody"><a href="#">Algorithms</a></li>
-			<li class="pagebody"><a href="#">Data structures</a></li>
-			<li class="pagebody"><a href="#">Software Engineering</a></li>-->
-		</ul>
-    </div>
-
-</body>
+        <div id="page_body">
+            <br/>
+            <p style="font-size: 24px">We develop software applications</p>
+            <div id="picture_frame">
+                <p>Technology Consulting</p>
+                <!--<img src="images/consulting.jpg" alt="Consulting" />-->
+            </div>
+            <div id="picture_frame">
+                <p>Business Analysis</p>
+                <!--<img src="images/analysis.jpg" alt="Consulting" />-->
+            </div>
+            <div id="picture_frame">
+                <p>Software Architectures</p>
+                <!--<img src="images/architectures.jpg" alt="Consulting" />-->
+            </div>
+        </div>
+        <p style="font-size: 9px;">Copyright 2018. All rights reserved</p>
+    </body>
 </html>
