--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <title> Eugene Farenyuk </title>
-        <link rel="stylesheet" href="mainCSS.css" type="text/css" media="screen"/>
+        <link rel="stylesheet" href="mainCSS.css" type="text/css" />
     </head>
     <body>
         <div id="page_header">
